# bio_ballyhoo

./: Cargo.toml  Makefile  README.md
derep/: Cargo.toml  README.md
derep/src/: lib.rs  main.rs
derep/test_files/: silly.fa  silly.fa.OUT
make_reads/: Cargo.toml
make_reads/src/: lib.rs  main.rs
msa_pairwise_identity/: Cargo.toml
msa_pairwise_identity/scripts/: parse_blosum_file.rb
msa_pairwise_identity/src/: blosum.rs  lib.rs  main.rs
msa_pairwise_identity/test_files/: silly.OUT.tsv  silly.fa
simple_headers/: Cargo.toml
simple_headers/src/: main.rs
simple_headers/test_files/: seqs.fa  seqs.simple_headers.fa  seqs.simple_headers.name_map.tsv
