[package]
name = "msa_pairwise"
version = "0.2.0"
authors = ["Ryan Moore <moorer@udel.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.32.0"
indicatif = "0.15.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
structopt = "0.3.21"
